--- a/JobBreeze/JobBreeze/Base.lproj/Localizable.strings
+++ b/JobBreeze/JobBreeze/Base.lproj/Localizable.strings
@@ -7,6 +7,7 @@
 
 // Localizable.strings
 
+// Home View
 "hello" = "Hello";
 "findYourPerfectJob" = "Find your perfect job";
 "whatAreYouLookingFor" = "what are you looking for?";
@@ -16,3 +17,13 @@
 "fullTime" = "Full-Time";
 "partTime" = "Part-Time";
 "contractor" = "Contractor";
+
+// Job Details View
+"about" = "About";
+"qualifications" = "Qualifications";
+ "responsibilities" = "Responsibilities";
+"aboutThisJob" = "About this job:";
+"noDataProvided" = "No data provided";
+"qualifications" = "Qualifications:";
+"responsibilities" = "Responsibilities:";
+"applyForJob" = "Apply for job";
